--- a/style.css
+++ b/style.css
@@ -1,8 +1,81 @@
+
 .top-image {
-    background-image: url("./market-img.jpg");
-    height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-content: flex-end;
+    background-image: url("images/Market-banner.png");
+    max-width: 100%;
+    height: auto;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /* position: relative;   */
+   
   } 
+  .logo{
+    max-width: 30%;
+    height: auto;
+  }
+  .input-bar{
+    width: 30%;
+  }
+  .title{
+    padding-top: 10px;
+  }
+  .button{
+    padding-left: 10px;
+  }
+  .add-button{
+    padding: 0.375rem 2.0rem;
+    color: #ffff;
+    border-radius: 4px;
+    background-color: #4CAF50
+  }
+  .add-button:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+  }
+  .del-button{
+    padding: 0.375rem 2.0rem;
+    color: #ffff;
+    border-radius: 4px;
+    background-color: rgb(243, 8, 8)
+  }
+  .del-button:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+  }
+  .title,.input{
+    display: flex;
+    top: 15%;
+    justify-content: center;
+  }
+  .dynamicNum{
+    display: flex;
+    justify-content: center;
+    padding-right: 16%;
+  }
+  .prod-to-buy{
+    background-color:  #ffda5f;
+    border-left: 5px  #ffcc25 solid;
+    padding: 6px 8px;
+    width: 30%;
+
+  }
+  .prod-delete{
+    background-color:  #fae49a;
+    border-left: 5px  #ffd139 solid;
+    padding: 6px 8px;
+    width: 30%;
+    
+    text-decoration: line-through;
+
+  }
+  /* footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+ } */
