--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 
 .top-image {
-  display: flex;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;    /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  display: flex;         /* NEW, Spec - Opera 12.1, Firefox 20+ */
   justify-content: center;
-  align-content: flex-end;
-    background-image: url("images/Market-banner.png");
-    max-width: 100%;
-    height: auto;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  -webkit-box-align: center;
+  -webkit-flex-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  background-image: url("images/Market-banner.png");
+  max-width: 100%;
+  height: auto;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
    
   } 
   .logo{
-    max-width: 30%;
+    max-width: 25%;
     height: auto;
   }
   .input-bar{
@@ -62,7 +70,7 @@
 
   }
   .prod-delete{
-    background-color:  #fae49a;
+    background-color:  #fcedbd;
     border-left: 5px  #ffd139 solid;
     padding: 6px 8px;
     width: 30%;
