--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@
   .buttons{
     border: none;
     background: none;
+    cursor: pointer;
     transition: 0.7s;
   }
   .buttons:focus{
@@ -84,6 +85,7 @@
     color: #ffff;
     border-radius: 4px;
     background-color: #4CAF50;
+    cursor: pointer;
     transition: 0.5s;
   }
   .add-button:focus{
@@ -99,6 +101,7 @@
     color: #ffff;
     border-radius: 4px;
     background-color: rgb(243, 8, 8);
+    cursor: pointer;
     transition: 0.5s;
   }
   .del-button:focus{
